styles.css
body {
  font-family: "Roboto", sans-serif;
}

.container {
  display: flex;
  flex-direction: column;
}

/* Navigation */

.navigation {
  background-color: #1f2937;
  display: flex;
  justify-content: space-between;
}

.Logo {
  align-items: center;
  color: #f9faf8;
  display: flex;
  font-size: 24px;
  font-weight: 700;
  padding-left: 42px;
}

.navlinks {
  align-items: center;
  display: flex;
  gap: 20px;
  padding-right: 42px;
}

.link a {
  align-items: center;
  color: #e5e7eb;
  display: flex;
  font-size: 18px;
  justify-content: space-evenly;
  text-decoration: none;
}

/* Hero */

.hero {
  align-items: center;
  background-color: #1f2937;
  color: #f9faf8;
  display: flex;
  justify-content: center;
  padding: 60px;
}

.maintext {
  display: flex;
  flex-basis: 400px;
  flex-direction: column;
  justify-content: center;
  margin-right: 40px;
  text-align: left;
}

.maintext h1 {
  color: #f9faf8;
  font-size: 48px;
  font-weight: bold;
}

.maintext p {
  color: #e5e7eb;
  font-size: 18px;
}

.maintext button {
  background: #3882f6;
  border-radius: 8px;
  border: none;
  color: #fff;
  display: block;
  font-family: "Roboto", arial;
  font-size: larger;
  font-weight: bold;
  padding: 10px;
  text-align: center;
  text-decoration: none;
  width: 110px;
}

.hero-image {
  align-items: center;
  display: flex;
  justify-content: center;
}

/* Content */

.content {
  display: flex;
  flex-direction: column;
}

.info {
  display: flex;
}

/* Quote */

.quote {
  display: flex;
}

/* Sign-up */

.signup {
  display: flex;
}

/* Footer */

.footer {
  display: flex;
}

